Added rules selection publishing

--- a/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/labels.json
+++ b/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/labels.json
@@ -92,5 +92,6 @@
   "opt_published": "pubblicate",
   "lbl_last_edit": "Ultima modifica",
   "lbl_saved_draft": "Salvata come draft",
-  "lbl_status": "Stato"
+  "lbl_status": "Stato",
+  "lbl_publish_selection": "Pubblica selezione"
 }
