--- a/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/messages.json
+++ b/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/messages.json
@@ -19,5 +19,6 @@
   "msg_error_exist" : "L'elemento esiste già",
   "msg_no_customdata": "Nessun custom data per il giocatore",
   "msg_invalid_time": "Inserire un'ora valida",
-  "msg_empty_fields": "Tutti i campi devono essere compilati"
+  "msg_empty_fields": "Tutti i campi devono essere compilati",
+  "msg_rule_edited": "La regola è stata modificata con successo"
 }
