--- a/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/labels.json
+++ b/game-engine.web/src/main/resources/consoleweb-assets/locales/it-IT/labels.json
@@ -82,6 +82,7 @@
   "btn_draft": "Salva come bozza",
   "lbl_add_rule": "Aggiungi regola",
   "title_add_task": "Aggiungi una nuova classifica",
+  "title_edit_task": "Modifica classifica",
   "btn_generate": "Genera",
   "lbl_order": "Ordina",
   "lbl_filter": "Filtra",
